# MNIST-MLP-Neural-Network

./: .gitignore  README.md  Trained Model.npz  draw.py  functions.py  img_predict.py  load_data.py  main.py  neural_network.py  pyproject.toml  requirements.txt  test.py  train.py  utils.py
old attempt/: main.py  neural_network.py  utils.py
reformatting attempt/: backpropagate.py  forward_pass.py  functions.py  neural_network.py  new_load_data.py  new_main.py
