[project]
name = "mnist-mlp-neural-network"
version = "0.1.0"
description = "Creating a MLP NN from scratch to classify MNIST dataset"
authors = [    {name = "ohnihili",email = "bpfsignorelli@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
